--- a/java/build.gradle
+++ b/java/build.gradle
@@ -21,5 +21,6 @@ repositories {
 dependencies {
     compile 'org.yaml:snakeyaml:1.24'
     compile 'net.dv8tion:JDA:4.ALPHA.0_79'
+    implementation "net.dean.jraw:JRAW:1.1.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
